[package]
name = "kylin"
version = "0.1.0"
edition = "2021"
authors = ["Hail <hail812@163.com>"]
description = """
Kylin
"""
documentation = "https://github.com/hail812/kylin"
homepage = "https://github.com/hail812/kylin"
repository = "https://github.com/hail812/kylin"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
